--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pyrogram 
+# --- For-Bot-Working --------- #
+pyrogram
 TgCrypto
-motor
-https://github.com/Tinche/aiofiles/archive/master.zip
-dnspython
-psutil
+Pyromod
+# --- For-Database ------------ #
+sqlalchemy~=1.3.23
+psycopg2-binary
+feedparser
+
