--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
       "description": "your api hash, take it from my.telegram.org",
       "value": ""
     },
+    "DATABASE_URL"{
+      "value":""
+    }, 
     "CHANNEL_ID":{
       "description": "make a channel (database channel), then make the bot as admin in channel, and it's id",
       "value": "-100"
